--- a/Exp8.ipynb
+++ b/Exp8.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<CENTER style=\"font-size:40px;\">Experiment 8</CENTER>"
+    "<CENTER style=\"font-size:40px;\">Python data analytics</CENTER>"
    ]
   },
   {
@@ -24,11 +24,9 @@
     "<table style=\"width: 100%;\">\n",
     "  <tr>\n",
     "    <td>Name</td>\n",
-    "    <td>Pranay Singhvi</td>\n",
+    "    <td>Lalit Kumar</td>\n",
     "  </tr>\n",
     "  <tr>\n",
-    "    <td>UID</td>\n",
-    "    <td>2021300126</td>\n",
     "  </tr>\n",
     "</table>\n"
    ]
